user and profile.js added

--- a/web/views/_eventCard.haml
+++ b/web/views/_eventCard.haml
@@ -10,7 +10,6 @@
       /%p{:"data-bind" => "text: prize()"}
       /%p{:"data-bind" => "text: time()"}
     .panel-footer
-      %button.btn.btn-primary{:'data-bind' =>'click : function() { $root.participate(id());}'}Participate
-      /%a.btn.btn-primary.pull-right{"data-target" => "#signInModal", "data-toggle" => "modal",:"data-bind" => "click : participateVar"}Participate
-      /%button.btn-primary{:"data-bind" => "click : DeleteEvent"}Delete Me
-      /%button.btn-primary{:"data-bind" => "click : deleteParticipateEvent"}Delete Me
+      %button#option.btn.btn-primary{:'data-bind' =>'click : participate'}Participate
+      /%button#delete.btn-primary{:"data-bind" => "click : DeleteEvent"}Delete Me
+      /%button#deleteParticipation.btn-primary{:"data-bind" => "click : deleteParticipateEvent"}Delete Me
