--- a/web/views/_topBar.haml
+++ b/web/views/_topBar.haml
@@ -1,4 +1,4 @@
-%header.navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
+%header#user.navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
   .container
     .navbar-header
       %a.navbar-brand{:href => "/"}=SiteConfig.title
@@ -23,7 +23,7 @@
               %li
                 %a{:href => '/me'} Profile
               %li
-                %a{:"data-bind" => "click: signOut"} Sign Out
+                %a{:"data-bind" => "click: signout"} Sign Out
         - else
           %li
             %form.navbar-form.navbar-right{:role => "form"}
@@ -31,6 +31,6 @@
                 %input.form-control{:style => "height:30px;",:"data-bind" => "value : uname", :placeholder => "Email address",:type => "text"}
               .form-group
                 %input.form-control{:style => "height:30px;",:"data-bind" => "value : pas", :placeholder => "Password",:type => "password"}
-              %button.btn.btn-success{"data-target" => "#signInModal", "data-toggle" => "modal"} Sign in
+              %button.btn.btn-success{:"data-bind" => "click : login"} Sign in
               %button.btn.btn-primary{"data-target" => "#signUpModal", "data-toggle" => "modal"} Sign Up
 %div{:id => 'msg'}
