--- a/web/views/_topBar.haml
+++ b/web/views/_topBar.haml
@@ -1,9 +1,21 @@
-%header#user.navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
+%header.navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
   .container
     .navbar-header
+      %button.navbar-toggle{"data-target" => ".navbar-collapse" , :type => "button" ,  "data-toggle" => "collapse" }
+        %span.sr-only Toggle navigation
+        %span.icon-bar
+        %span.icon-bar
+        %span.icon-bar
       %a.navbar-brand{:href => "/"}=SiteConfig.title
-    .nav
-      %ul.nav.navbar-nav.navbar-right
+    .navbar-collapse.collapse
+      %ul#events.nav.navbar-nav
+        %li
+          %a{:"data-bind" => "click : showMyEvents"}My Events
+        %li
+          %a{:"data-bind" => "click : showParticipationEvents"}Participated Events
+        %li
+          %a{:"data-bind" => "click : getTopEvents"}Top Trends
+      %ul#user.nav.navbar-nav.navbar-right
         - unless @user.nil? or @user == ''
           %li
             %a{:href => '/loggedIn'}
