--- a/web/views/home.haml
+++ b/web/views/home.haml
@@ -2,21 +2,23 @@
 %html{:lang => "en"}
   %head
     %title Event Planner
-    %link{:href => "../assets/css/bootstrap.min.css", :rel => "stylesheet"}
     %link{:href => "../assets/css/jumbotron.css", :rel => "stylesheet"}
+    %link{:href => "../assets/css/bootstrap.min.css", :rel => "stylesheet"}
     %link{:href => "../assets/css/navbar-fixed-top.css", :rel => "stylesheet"}
-  %body
+    %link{:href => "../assets/css/custom.css", :rel => "stylesheet"}
+  %body.main
     =haml_partial "topBar"
     .container
-      .jumbotron
+      .jumbotron.heading
         %h1 Flockers
         %p A site to reveal the FUN SIDE of you.
       %div#event
         .row
-          %p.alert.alert-danger#InvalidUser{:style => 'visibility : hidden',:'data-bind' => 'text : message'}
-          %p.alert.alert-success#SuccessfulSignup{:style => 'visibility : hidden'}You have signed up successfully
+          /%p.alert.alert-danger#InvalidUser{:style => 'visibility : hidden',:'data-bind' => 'text : message'}
+          /%p.alert.alert-success#SuccessfulSignup{:style => 'visibility : hidden'}You have signed up successfully
         .row{:"data-bind" => "foreach: publicEvents"}
-          =haml_partial "eventCard"
+          .col-md-4
+            =haml_partial "eventCard"
       #signInModal.modal.fade{"aria-hidden" => "true", "aris-labelledby" => "signInModal",:role => "dialog" ,:tabindex => "-1"}
         .modal-dialog
           .modal-content
