--- a/web/views/profile.haml
+++ b/web/views/profile.haml
@@ -2,15 +2,15 @@
 %html{:lang => "en"}
   %head
     %title Create Flock
-    %script{:src => "../assets/js/jquery.min.js"}
     %link{:href=>"//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css", :rel=>"stylesheet"}
     %link{:href => "../assets/css/bootstrap.min.css", :rel => "stylesheet"}
     %link{:href => "../assets/css/bootstrap-timepicker.css", :rel => "stylesheet"}
     %link{:href => "../assets/css/datepicker.css", :rel => "stylesheet"}
     %link{:href => "../assets/css/navbar-fixed-top.css", :rel => "stylesheet"}
-    %script{:src => "../assets/js/jquery.wheelmenu.js", :type => "text/javascript"}
     %link{:href => "../assets/css/style.css", :rel => "stylesheet", :type => "text/css"}
-  %body
+    %script{:src => "../assets/js/jquery.min.js"}
+    %script{:src => "../assets/js/jquery.wheelmenu.js", :type => "text/javascript"}
+  %body.main
     =haml_partial "topBar"
     .container
       .row
