--- a/web/views/_topBar.haml
+++ b/web/views/_topBar.haml
@@ -35,7 +35,7 @@
               %li
                 %a{:href => '/me'} Profile
               %li
-                %a{:"data-bind" => "click: signout"} Sign Out
+                %a{:href => '#', :"data-bind" => "click: signout"} Sign Out
         - else
           %li
             %form.navbar-form.navbar-right{:role => "form"}
