--- a/web/views/_topBar.haml
+++ b/web/views/_topBar.haml
@@ -1,25 +1,16 @@
 %header.navbar.navbar-inverse.navbar-fixed-top{:role => "navigation"}
   .container
     .navbar-header
-      %button.navbar-toggle{"data-target" => ".navbar-collapse" , :type => "button" ,  "data-toggle" => "collapse" }
-        %span.sr-only Toggle navigation
-        %span.icon-bar
-        %span.icon-bar
-        %span.icon-bar
       %a.navbar-brand{:href => "/"}=SiteConfig.title
-    .navbar-collapse.collapse
-      %ul#events.nav.navbar-nav
-        %li
-          %a{:"data-bind" => "click : showMyEvents"}My Events
-        %li
-          %a{:"data-bind" => "click : showParticipationEvents"}Participated Events
-        %li
-          %a{:"data-bind" => "click : getTopEvents"}Top Trends
+    .nav
       %ul#user.nav.navbar-nav.navbar-right
         - unless @user.nil? or @user == ''
           %li
             %a{:href => '/loggedIn'}
               Create Flock
+          %li
+            %a{:href => '/myevents'}
+              My Flocks
           %li.dropdown
             / This href is very important here, otherwise this does not work on iphone
             %a.dropdown-toggle{:href => "#", :"data-toggle"=>'dropdown'}
